testsuites/LLT/compiler/Diagnose/lex_test/lex_multiline_string_start_from_newline/case4.expect.out
error: multi-line string may need start with newline character
 ==> case4.cj:6:16:
  | 
6 |     var a = """cangjie
  |             ~~~^ excepted starting with newline character
  |             |
  |             because it is in multi-line string
  | 

error: multi-line string may need start with newline character
 ==> case4.cj:9:17:
  | 
9 |     var a1 = """cangjie\u{0000}
  |              ~~~^ excepted starting with newline character
  |              |
  |              because it is in multi-line string
  | 

2 errors generated, 2 errors printed.
